<resources>
    <string name="app_name">怡养康家属端</string>
    <string name="home_login_title">怡养康护理系统</string>
    <string name="home_input_pwd">请输入密码</string>
    <string name="home_input_account">请输入用户名</string>
    <string name="common_login">登录</string>
    <string name="home_remember_pwd">记住密码</string>
    <string name="home_tech_contract">技术咨询：山东安居科技 0533&#8211;3167611</string>
    <string name="home">主页</string>
</resources>
